web#687 [APP/INTERCOM] fixed: z-index and close icon color

--- a/app/styles/components/_intercom.scss
+++ b/app/styles/components/_intercom.scss
@@ -4,13 +4,13 @@
   position: fixed;
   right: 2rem;
   bottom: 2rem;
-  z-index: 9999;
+  z-index: 3860017101;
   padding: 0;
   text-align: center;
   cursor: pointer;
   border-radius: 100%;
   border-width: 0;
-  background: #fff;
+  background: #2196f3;
   box-shadow: 0 2px 13px 0 rgba(0, 0, 0, 0.15);
 
   > svg {
